Update2 pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <profile>
             <id>coverage</id>
             <activation>
-                <activeByDefault>true</activeByDefault</groupId>
+               <activeByDefault>true</activeByDefault>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <executions>
                             <execution>
