--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>sonarqube-maven-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Example of basic Maven project to integrate with SonarQube</name>
+    <name> Testing for sonarEE Migration to SonarQube Saas </name>
 
     <dependencies>
         <dependency>
